--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,8 @@
-php_flag display_errors on
+php_flag display_errors on 
+
+
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+
+RewriteRule ^tasks/([0-9]+)$ controller/taskController.php?taskid=$1 [L]
